# minecheck-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust-toolchain.yml
src/: main.rs
src/checks/: hypixel.rs  mod.rs  mojang.rs  sfa.rs  web.rs
src/types/: mod.rs
