[package]
name = "minecheck2-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.4", features=["json", "socks"]}
tokio = {version = "1.12.0", features=["full", "macros"]}
serde = "1.0.130"
serde_json = "1.0.68"
async-trait = "0.1.51"
rand = "0.8.4"